--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
+    "@next/font": "^13.0.3",
     "clsx": "^1.2.1",
     "next": "13.0.3",
     "react": "18.2.0",
