--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^1.2.1",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
