--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
