--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@next/font": "^13.0.3",
+    "@prisma/client": "^4.6.1",
     "clsx": "^1.2.1",
     "next": "13.0.3",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "postcss": "^8.4.19",
+    "prisma": "^4.6.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
